enhance(ui): add ghost shui button for the toolbar

--- a/packages/ui/src/index.css
+++ b/packages/ui/src/index.css
@@ -114,6 +114,14 @@
       --accent: var(--rx-gray-02-hsl);
       --accent-foreground: var(--rx-gray-12-hsl);
     }
+
+    &[data-button="icon"] {
+      @apply box-content p-1 overflow-hidden h-6 w-6;
+
+      &.as-ghost:hover {
+        background: var(--lx-gray-03, var(--ls-tertiary-background-color, var(--rx-gray-03)));
+      }
+    }
   }
 
   .ui__toaster {
