--- a/src/main/frontend/components/property/value.css
+++ b/src/main/frontend/components/property/value.css
@@ -20,3 +20,10 @@
     }
   }
 }
+
+.overdue {
+  @apply text-yellow-rx-08 dark:text-yellow-rx-10;
+  .page-ref {
+    @apply text-yellow-rx-08 dark:text-yellow-rx-10;
+  }
+}
