--- a/src/main/frontend/components/property/value.css
+++ b/src/main/frontend/components/property/value.css
@@ -23,7 +23,7 @@
 
 .overdue {
   @apply text-yellow-rx-08 dark:text-yellow-rx-10;
-  .page-ref {
+  :not(.ls-datetime) .page-ref {
     @apply text-yellow-rx-08 dark:text-yellow-rx-10;
   }
 }
