--- a/src/main/frontend/components/table.css
+++ b/src/main/frontend/components/table.css
@@ -129,3 +129,9 @@ html.is-resizing-buf {
 .markdown-table {
   width: 98%;
 }
+
+.sticky-columns {
+    @apply sticky left-0;
+    z-index: 99;
+    background-color: var(--lx-gray-01, var(--ls-primary-background-color, hsl(var(--background))));
+}
