enhance: show task status when referencing the task

--- a/src/main/frontend/components/block.css
+++ b/src/main/frontend/components/block.css
@@ -379,7 +379,7 @@
 }
 
 .page-reference {
-  @apply inline rounded transition-[background];
+  @apply inline-flex flex-row items-center rounded transition-[background];
 
   .bracket {
     @apply opacity-30;
