--- a/src/main/frontend/components/block.css
+++ b/src/main/frontend/components/block.css
@@ -72,7 +72,7 @@
 }
 
 .block-content-or-editor-inner {
-  @apply flex flex-1 flex-col w-full;
+  @apply flex flex-1 flex-col w-full pr-1;
 }
 
 .block-head-wrap {
