fix: bullet not aligned center on table view

--- a/src/main/frontend/components/table.css
+++ b/src/main/frontend/components/table.css
@@ -15,12 +15,8 @@
     @apply w-full py-0;
   }
 
-  .block-control, .block-control-wrap {
-    @apply h-5 min-h-[20px];
-  }
-
-  .block-main-container, .block-content {
-    @apply min-h-[20px];
+  .block-main-content, .block-head-wrap {
+    @apply min-h-[24px];
   }
 
   .property-value-inner {
