enhance: style tweaks

--- a/src/main/frontend/components/property/value.css
+++ b/src/main/frontend/components/property/value.css
@@ -27,3 +27,7 @@
     @apply text-yellow-rx-08 dark:text-yellow-rx-10;
   }
 }
+
+.ls-property-key .cp__select-input, .property-select .cp__select-input {
+    @apply text-sm;
+}
