fix(ui): Incorrect hierarchy affects the functionality of the button tag

--- a/src/main/frontend/components/property.css
+++ b/src/main/frontend/components/property.css
@@ -188,6 +188,10 @@
     @apply flex items-center shrink;
   }
 
+  &[data-type] {
+    @apply flex items-center;
+  }
+
   &[data-type="datetime"] {
     @apply whitespace-nowrap;
   }
