fix: nested list gap

--- a/src/main/frontend/components/views.css
+++ b/src/main/frontend/components/views.css
@@ -7,3 +7,7 @@
 .group-list-view div[data-testid='virtuoso-item-list'] {
     @apply flex flex-col gap-2;
 }
+
+.group-list-view div[data-testid='virtuoso-item-list'] div[data-testid='virtuoso-item-list'] {
+    @apply gap-0;
+}
