enhance(ux): click node name to open it in sidebar on table view
Also, disable editing for node names for better ux and performance.

--- a/src/main/frontend/components/table.css
+++ b/src/main/frontend/components/table.css
@@ -35,7 +35,7 @@
       @apply whitespace-nowrap;
     }
 
-    .block-head-wrap span, .block-head-wrap a {
+    .table-block-title, .block-head-wrap a {
       @apply text-ellipsis overflow-hidden;
     }
 
