--- a/src/main/frontend/common.css
+++ b/src/main/frontend/common.css
@@ -325,7 +325,7 @@ h1.title, h1.title input, .ls-page-title-container {
 }
 
 .block-highlight,
-.content .selected,
+.ls-block.selected,
 .ls-dummy-block.selected {
   transition: background-color 0.2s cubic-bezier(0, 1, 0, 1);
   background-color: var(--ls-block-highlight-color, var(--rx-gray-04));
