--- a/src/main/frontend/extensions/pdf/pdf.css
+++ b/src/main/frontend/extensions/pdf/pdf.css
@@ -1009,5 +1009,11 @@ html.is-system-window {
 }
 
 .pdfViewer .page.loadingIcon::after {
-  background: none;
+  @apply bg-none;
+}
+
+.textLayer :is(span, br) {
+  &::selection {
+    @apply text-transparent;
+  }
 }
