fix(ui): broken line for the annotation block ref

--- a/src/main/frontend/components/block.css
+++ b/src/main/frontend/components/block.css
@@ -410,6 +410,12 @@
       @apply inline;
     }
   }
+
+  .block-title-wrap {
+    > .prefix-link {
+      @apply inline mx-1;
+    }
+  }
 }
 
 .asset-ref {
