--- a/tailwind.capacitor.css
+++ b/tailwind.capacitor.css
@@ -1,8 +1,7 @@
 @charset "utf-8";
 
-@import "packages/ui/src/radix.css";
-@import "packages/ui/src/radix-hsl.css";
-@import "packages/ui/src/vars-classic.css";
-@import "packages/ui/src/colors.css";
-@import "packages/ui/src/index.css";  /* Tailwind base imported here */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @import-glob "src/main/capacitor/**/[!_]*.css";
