--- a/src/main/frontend/extensions/code.css
+++ b/src/main/frontend/extensions/code.css
@@ -40,6 +40,7 @@
 
 .CodeMirror {
   height: auto;
+  max-height: 1024px;
   width: 100%;
   font-family: Fira Code, Monaco, Menlo, Consolas, 'COURIER NEW', monospace;
   border-radius: 2px;
