enhance: unify page and block references

--- a/src/main/frontend/components/property.css
+++ b/src/main/frontend/components/property.css
@@ -185,7 +185,7 @@
 
 .property-value-inner {
   .select-item {
-    @apply flex items-center shrink;
+    @apply flex items-center shrink whitespace-nowrap;
   }
 
   &[data-type] {
