--- a/src/main/capacitor/app.css
+++ b/src/main/capacitor/app.css
@@ -8,7 +8,7 @@
   }
 }
 
-html.plt-capacitor {
+html.plt-capacitor.plt-android {
   ion-button, ion-tab-button {
     --ripple-color: rgba(0, 0, 0, .08); /* 设置涟漪颜色为透明 */
   }
