enhance(capacitor): blocks page

--- a/src/main/capacitor/app.css
+++ b/src/main/capacitor/app.css
@@ -17,3 +17,11 @@ html.plt-capacitor.plt-android {
     margin-top: 40px;
   }
 }
+
+ul {
+  @apply !list-disc ml-1 mt-2 list-inside;
+
+  li {
+    @apply pl-0;
+  }
+}
