enhance(capacitor): create new page

--- a/src/main/capacitor/app.css
+++ b/src/main/capacitor/app.css
@@ -48,3 +48,10 @@ ion-textarea {
     background-color: var(--ion-color-light-tint);
   }
 }
+
+[type='text']:focus, [type='email']:focus, [type='url']:focus,
+[type='password']:focus, [type='number']:focus, [type='date']:focus, [type='datetime-local']:focus,
+[type='month']:focus, [type='search']:focus, [type='tel']:focus, [type='time']:focus, [type='week']:focus,
+[multiple]:focus, textarea:focus, select:focus {
+  box-shadow: none;
+}
