enhance(ux): block inline editing in table
1. Click to edit block title, click the right arrow button in the
popup to redirect to the block if needed
2. Click sidebar icon or shift+click to open in sidebar
3. mod+click to redirect to the block

--- a/src/main/frontend/components/property/value.css
+++ b/src/main/frontend/components/property/value.css
@@ -31,3 +31,8 @@
 .ls-property-key .cp__select-input, .property-select .cp__select-input {
     @apply text-sm;
 }
+
+.ls-number {
+  @apply cursor-text;
+  min-height: 20px;
+}
