enhance(ux): up/down to navigate table rows

--- a/src/main/frontend/components/table.css
+++ b/src/main/frontend/components/table.css
@@ -35,6 +35,10 @@
       @apply whitespace-nowrap;
     }
 
+    :focus {
+        @apply bg-gray-03;
+    }
+
     .table-block-title, .block-head-wrap a {
       @apply text-ellipsis overflow-hidden;
     }
