fix(regression): can't set default-value on :default property

--- a/src/main/frontend/components/block.css
+++ b/src/main/frontend/components/block.css
@@ -533,7 +533,7 @@
 }
 
 .ls-block {
-  @apply relative py-0.5 transition-[background-color] mx-auto;
+  @apply flex-1 relative py-0.5 transition-[background-color] mx-auto;
 
   &.selected {
     @apply rounded;
