enhance(ux): table row/cell navigation (#11837)
* enhance(ux): up/down to navigate table rows

* enhance: remove block id+uuid class

Use `blockid`.

* enhance: arrowleft to select cell when a table row has been selected

* wip: table cell navigation

* feat: up/down/left/right table cell navigation

* enhance(ux): scroll to cell when it's not visible

* fix: save block content when exit title cell popup

* fix: table keyboard navigation doesn't work on virtualized table

The solution is to preload more rows for virtualized tables.

--- a/src/main/frontend/common.css
+++ b/src/main/frontend/common.css
@@ -326,7 +326,9 @@ h1.title, h1.title input, .ls-page-title-container {
 
 .block-highlight,
 .ls-block.selected,
-.ls-dummy-block.selected {
+.ls-dummy-block.selected,
+.ls-table-cell.selected
+{
   transition: background-color 0.2s cubic-bezier(0, 1, 0, 1);
   background-color: var(--ls-block-highlight-color, var(--rx-gray-04));
 }
