--- a/src/main/frontend/components/right_sidebar.css
+++ b/src/main/frontend/components/right_sidebar.css
@@ -32,7 +32,7 @@ html[data-theme=light] {
 }
 
 .cp__right-sidebar-topbar {
-  @apply px-1 h-12 bg-transparent;
+  @apply px-1 h-12;
 
   button {
     @apply opacity-100;
