--- a/src/main/capacitor/app.css
+++ b/src/main/capacitor/app.css
@@ -8,6 +8,10 @@
   }
 }
 
+html.plt-capacitor.plt-iphone {
+  --ion-safe-area-top: 40px;
+}
+
 html.plt-capacitor.plt-android {
   --ion-safe-area-top: 40px;
 
@@ -25,6 +29,10 @@ html.plt-capacitor.plt-android {
       border-bottom: .5px solid rgba(0, 0, 0, .15);
     }
   }
+}
+
+ion-toolbar {
+  @apply my-1 py-1;
 }
 
 ul {
