enhance(ux): hovering tag doesn't increase its width

--- a/src/main/frontend/components/block.css
+++ b/src/main/frontend/components/block.css
@@ -963,6 +963,10 @@ html.is-mac {
   .block-title-wrap {
     @apply overflow-hidden h-6 whitespace-nowrap text-ellipsis;
   }
+
+  .jtrigger {
+    @apply px-1;
+  }
 }
 
 .positioned-properties.block-below {
