--- a/src/main/frontend/components/right_sidebar.css
+++ b/src/main/frontend/components/right_sidebar.css
@@ -23,7 +23,7 @@ html[data-theme=light] {
 
 .cp__header {
   > .r > div:not(.ui__dropdown-trigger) a, button {
-    @apply opacity-70;
+    @apply opacity-70 text-[inherit];
 
     &:hover {
       @apply opacity-100;
